--- a/Countries/Views/LoginPage.xaml
+++ b/Countries/Views/LoginPage.xaml
@@ -3,23 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="Countries.Views.LoginPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
-             Title="Login">
+             Title="CountryCoins">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout
-                Padding="20,50,10,20">
-                <Label
-                    FontAttributes="Bold"
-                    FontSize="Large"
-                    HorizontalOptions="Center"
-                    Text="Countries">
-                </Label>
+                Padding="10">
                 <Image
-                    Source="green"
-                    WidthRequest="150">
+                    Source="bitcoin"
+                    WidthRequest="120">
                 </Image>
                 <Grid
-                    Margin="0,30">
+                    Margin="0,10"
+                    VerticalOptions="CenterAndExpand">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="2*"/>                    
@@ -27,23 +22,29 @@
                     <Label
                         Grid.Row="0"
                         Grid.Column="0"
-                        Text="E-mail">  
+                        Margin="10,0"
+                        Text="E-mail"
+                        VerticalOptions="Center">  
                     </Label>
                     <Entry
                         Grid.Row="0"
                         Grid.Column="1"                    
                         Keyboard="Email"
+                        Margin="10,0"
                         Placeholder="Enter your e-mail">
                     </Entry>
                     <Label 
                         Grid.Row="1"
                         Grid.Column="0"
-                        Text="Password">
+                        Margin="10,0"
+                        Text="Password"
+                        VerticalOptions="Center">
                     </Label>
                     <Entry
                         Grid.Row="1"
                         Grid.Column="1"
                         IsPassword="true"
+                        Margin="10,0"
                         Placeholder="Enter your password">
                     </Entry>
                 </Grid>
@@ -52,12 +53,15 @@
                 <StackLayout
                     Orientation="Horizontal">
                     <Label
+                        FontSize="Small"
                         HorizontalOptions="StartAndExpand"
+                        Margin="10,0"
                         Text="Rememberme on this device"
-                        VerticalOptions="Center">
+                        VerticalOptions="CenterAndExpand">
                     </Label>
                     <Switch
-                        HorizontalOptions="End">
+                        HorizontalOptions="End"
+                        Margin="10,0">
                     </Switch>
                 </StackLayout>
                 <Label
@@ -67,32 +71,48 @@
                     VerticalOptions="CenterAndExpand">
                 </Label>
                 <StackLayout
-                    Margin="50,0">
+                    Margin="10,0"
+                    Orientation="Horizontal"
+                    VerticalOptions="CenterAndExpand">
                     <Button 
-                        BackgroundColor="Navy"
-                        BorderRadius="20"
-                        HeightRequest="40"
+                        BackgroundColor="Green"
+                        BorderRadius="21"
+                        FontAttributes="Bold"
+                        HeightRequest="42"
+                        HorizontalOptions="FillAndExpand"
+                        Margin="7,0"
                         Text="Login"
                         TextColor="White">
                     </Button>
                     <Button 
-                        BackgroundColor="Purple"
-                        BorderRadius="20"
-                        HeightRequest="40"
+                        BackgroundColor="Green"
+                        BorderRadius="21"
+                        FontAttributes="Bold"
+                        HeightRequest="42"
+                        HorizontalOptions="FillAndExpand"
+                        Margin="7,0"
                         Text="Register"
                         TextColor="White">
                     </Button>
                 </StackLayout>
                 <StackLayout
-                    HorizontalOptions="Center"
-                    Orientation="Horizontal">
+                    HorizontalOptions="CenterAndExpand"
+                    Orientation="Horizontal"
+                    VerticalOptions="EndAndExpand">
                     <Image
-                        Source="facebook_logo"
-                        WidthRequest="80">
+                        Margin="10,0"
+                        Source="facebook"
+                        WidthRequest="60">
                     </Image>
                     <Image
-                        Source="twitter_logo"
-                        WidthRequest="70">
+                        Margin="10,0"
+                        Source="twitter"
+                        WidthRequest="60">
+                    </Image>
+                    <Image
+                        Margin="10,0"
+                        Source="instagram"
+                        WidthRequest="60">
                     </Image>
                 </StackLayout>
             </StackLayout>
