--- a/Countries/Views/LoginPage.xaml
+++ b/Countries/Views/LoginPage.xaml
@@ -11,7 +11,7 @@
                 Padding="10">
                 <Image
                     Source="bitcoin"
-                    WidthRequest="120">
+                    WidthRequest="100">
                 </Image>
                 <Grid
                     Margin="0,10"
@@ -21,32 +21,36 @@
                         <ColumnDefinition Width="2*"/>                    
                     </Grid.ColumnDefinitions>
                     <Label
+                        FontSize="Small"                        
                         Grid.Row="0"
                         Grid.Column="0"
-                        Margin="10,0"
+                        Margin="6,0"
                         Text="E-mail"
                         VerticalOptions="Center">  
                     </Label>
                     <Entry
+                        FontSize="Small"
                         Grid.Row="0"
                         Grid.Column="1"                    
                         Keyboard="Email"
-                        Margin="10,0"
+                        Margin="6,0"
                         Text="{Binding Email, Mode=TwoWay}"
                         Placeholder="Enter your e-mail">
                     </Entry>
-                    <Label 
+                    <Label
+                        FontSize="Small"
                         Grid.Row="1"
                         Grid.Column="0"
-                        Margin="10,0"
+                        Margin="6,0"
                         Text="Password"
                         VerticalOptions="Center">
                     </Label>
                     <Entry
+                        FontSize="Small"
                         Grid.Row="1"
                         Grid.Column="1"
                         IsPassword="true"
-                        Margin="10,0"
+                        Margin="6,0"
                         Text="{Binding Password, Mode=TwoWay}"
                         Placeholder="Enter your password">
                     </Entry>
@@ -85,6 +89,7 @@
                         FontAttributes="Bold"
                         HeightRequest="42"
                         HorizontalOptions="FillAndExpand"
+                        IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
                         Margin="7,0"
                         Text="Login"
                         TextColor="White">
@@ -96,12 +101,13 @@
                         FontAttributes="Bold"
                         HeightRequest="42"
                         HorizontalOptions="FillAndExpand"
+                        IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
                         Margin="7,0"
                         Text="Register"
                         TextColor="White">
                     </Button>
                 </StackLayout>
-                <StackLayout
+               <StackLayout
                     HorizontalOptions="CenterAndExpand"
                     Orientation="Horizontal"
                     VerticalOptions="EndAndExpand">
