--- a/Countries/Views/LoginPage.xaml
+++ b/Countries/Views/LoginPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="Countries.Views.LoginPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
-             Title="CountryCoins">
+             Title="Login">
     <ContentPage.Content>
         <ScrollView
             BindingContext="{Binding Login}">
